--- a/Proyecto1/nbproject/project.properties
+++ b/Proyecto1/nbproject/project.properties
@@ -27,13 +27,37 @@ dist.dir=dist
 dist.jar=${dist.dir}/Proyecto1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.hamcrest-core-1.3.jar=C:\\Users\\brian\\OneDrive\\Escritorio\\jfreechart-1.0.19\\lib\\hamcrest-core-1.3.jar
 file.reference.java-cup-11b.jar=C:\\Users\\brian\\OneDrive\\Escritorio\\jflex y cup\\java-cup-11b.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\brian\\OneDrive\\Escritorio\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
 file.reference.jflex-1.7.0.jar=C:\\Users\\brian\\OneDrive\\Escritorio\\jflex y cup\\jflex-1.7.0.jar
+file.reference.jfreechart-1.0.19-demo.jar=C:\\Users\\brian\\OneDrive\\Escritorio\\jfreechart-1.0.19\\jfreechart-1.0.19-demo.jar
+file.reference.jfreechart-1.0.19-experimental.jar=C:\\Users\\brian\\OneDrive\\Escritorio\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-swt.jar=C:\\Users\\brian\\OneDrive\\Escritorio\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\brian\\OneDrive\\Escritorio\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
+file.reference.jfreesvg-2.0.jar=C:\\Users\\brian\\OneDrive\\Escritorio\\jfreechart-1.0.19\\lib\\jfreesvg-2.0.jar
+file.reference.junit-4.11.jar=C:\\Users\\brian\\OneDrive\\Escritorio\\jfreechart-1.0.19\\lib\\junit-4.11.jar
+file.reference.orsoncharts-1.4-eval-nofx.jar=C:\\Users\\brian\\OneDrive\\Escritorio\\jfreechart-1.0.19\\lib\\orsoncharts-1.4-eval-nofx.jar
+file.reference.orsonpdf-1.6-eval.jar=C:\\Users\\brian\\OneDrive\\Escritorio\\jfreechart-1.0.19\\lib\\orsonpdf-1.6-eval.jar
+file.reference.servlet.jar=C:\\Users\\brian\\OneDrive\\Escritorio\\jfreechart-1.0.19\\lib\\servlet.jar
+file.reference.swtgraphics2d.jar=C:\\Users\\brian\\OneDrive\\Escritorio\\jfreechart-1.0.19\\lib\\swtgraphics2d.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.java-cup-11b.jar}:\
-    ${file.reference.jflex-1.7.0.jar}
+    ${file.reference.jflex-1.7.0.jar}:\
+    ${file.reference.jfreechart-1.0.19-demo.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jfreesvg-2.0.jar}:\
+    ${file.reference.junit-4.11.jar}:\
+    ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
+    ${file.reference.orsonpdf-1.6-eval.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.swtgraphics2d.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
